# CAF

./: .gitignore  LICENSE  README.md  environment.yml  pyproject.toml  requirements.txt
caf_core/: __init__.py  solver.py
data/: README.md
data/russell3000_subset/: 1_2018-01-01_returns.npy
dcmppln/: denoiser.py  optimizer.py
experiments/: _common.py  config.example.py
experiments/classical/: run_benchmark.py  run_scaling.py  run_sparsity.py  run_suppression.py
experiments/quantum/: run_frozen_ablation.py  run_hardware_qaoa.py  run_qaoa.py  run_sqa.py
tests/: test_smoke.py
